# FishLearning

./: Makefile  README.md  fish_learning.chpl  main.chpl  run_naive_bayes.chpl
E1/: E1-0
chapel/: Makefile  html  main.chpl  run_naive_bayes.chpl
chapel/data/: data.chpl  iris.csv
chapel/plots/: iris_feats.r
chapel/supervised/: knn.chpl  naive_bayes.chpl
chapel/utils/: math.chpl  myheap.chpl  stats.chpl
classifier/: knn.chpl
cli/: draw_curves.chpl  run-convolution.chpl  run-naive-bayes.chpl  run-threshold.chpl  run_convolution.chpl  run_fourier.chpl  run_naive_bayes.chpl  run_threshold.chpl
cpp/: CMakeLists.txt
cpp/classifier/: naive_bayes.cpp  naive_bayes.h
cpp/demo/: hue.cpp
cpp/util/: array.h  io.h  stats.h
data/: data.chpl  digits.csv
filter/: convolution.chpl  kernel.chpl  threshold.chpl
frequency/: fourier.chpl
graphics/: draw.chpl
image/: image.chpl
io/: png.chpl
plots/: iris_feats.r
supervised/: knn.chpl  logistic_regression.chpl  naive_bayes.chpl
utils/: heap.chpl  math.chpl  queue.chpl  sorting.chpl  stats.chpl  utils.chpl
